update db and http

--- a/wsgi.ini
+++ b/wsgi.ini
@@ -5,7 +5,7 @@ module = deli_menu.http.wsgi:application
 disable-logging = True
 processes = 4
 master = True
-env = SETTINGS_MODULE=deli_menu.settings
+env = settings=deli_menu.settings
 
 ; If VIRTAL_ENV is set then use its value to specify the virtualenv directory
 if-env = VIRTUAL_ENV
