update deps, add security-data endpoint, fix docker image

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,17 @@
 # Copy this to .env
+
+####################
+# DATABASE         #
+####################
+
 DATABASE_HOST=127.0.0.1
 DATABASE_USERNAME=sandwich
 DATABASE_PASSWORD=hunter2
+
+####################
+# Auth             #
+####################
+
+# This NEED to match what is given to deli-counter
+# See deli-counter for explanation of usage
+AUTH_FERNET_KEYS=
