--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pbr==3.1.1 # Apache 2.0
 python-dotenv==0.7.1 # BSD 3-clause
 pyyaml==3.12 # MIT
+cryptography==2.1.4 # Apache 2.0 or BSD
 ingredients.http==0.0.12 # MIT
-ingredients.db==0.0.9 # MIT
+ingredients.db==0.0.11 # MIT
