--- a/wsgi.ini
+++ b/wsgi.ini
@@ -6,6 +6,8 @@ disable-logging = True
 processes = 4
 master = True
 env = settings=deli_menu.settings
+; This is to prevent connection reuse. No idea how to make cherry-py support that
+add-header = Connection: Close
 
 ; If VIRTAL_ENV is set then use its value to specify the virtualenv directory
 if-env = VIRTUAL_ENV
